# SteamAppIdentify

./: .gitignore  README.md  build.spec  installer.iss  main.py  pyproject.toml
.github/workflows/: build.yml
scripts/: build.sh
src/: acf_parser.py  app.py  file_ops.py  lua_parser.py  manifest_gen.py  steam_api.py  worker.py  zip_ops.py
