[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appidentify"
version = "1.0.0"
description = "Audit Steam appmanifest files to verify DLC completeness"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.5"]

[project.scripts]
appidentify = "src.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

